--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,11 +53,11 @@ services:
         networks:
             - app-network
 
-#Docker Networks
+# Docker Networks
 networks:
     app-network:
         driver: bridge
-#Volumes
+# #Volumes
 volumes:
     dbdata:
         driver: local
